[tool.poetry]
name = "ygo_small_world"
version = "0.2.0"
description = "A bridge finder for the card 'Small World' in the card game 'Yu-Gi-Oh!'."
authors = ["Kenneth Allen <kencubed@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
requests = "^2.31.0"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
